--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1{
     background: linear-gradient(90deg, rgba(14, 45, 112, 0.5), rgba(14, 45, 112, 0));
     padding: 2%;
 }
-h1, .main{
+h1, .main, .gif-block{
     opacity: 0;
     transition: opacity ease-in-out 0.8s;
 }
