--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/kana-sans');
+@import url('https://fonts.cdnfonts.com/css/kana-sans');
 @media screen{
     *{
     font-family: 'Kana Sans', sans-serif;
